feat: resource servico
